[gd_scene load_steps=5 format=3 uid="uid://ciatbfx13u6rt"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_vnug1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b2oxm"]
size = Vector2(27, 39)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ec7sw"]
size = Vector2(40, 52)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6pftg"]
size = Vector2(27, 40)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_vnug1")
sprint_speed = 400.0

[node name="Audio" type="Node" parent="."]

[node name="Pickup" type="AudioStreamPlayer" parent="Audio"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_b2oxm")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -14.0
offset_top = -20.0
offset_right = 14.0
offset_bottom = 20.0
size_flags_horizontal = 4

[node name="PickupRange" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupRange"]
visible = false
shape = SubResource("RectangleShape2D_ec7sw")

[node name="DamageBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageBox"]
position = Vector2(27.5, 0)
shape = SubResource("RectangleShape2D_6pftg")
disabled = true
debug_color = Color(0.576471, 0.552941, 0.137255, 0.419608)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DamageBox"]
position = Vector2(-27.5, 0)
shape = SubResource("RectangleShape2D_6pftg")
disabled = true
debug_color = Color(0.576471, 0.552941, 0.137255, 0.419608)

[connection signal="body_entered" from="PickupRange" to="." method="_on_pickup_range_body_entered"]
[connection signal="body_entered" from="DamageBox" to="." method="_on_damage_box_body_entered"]
